[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
serde = {version="1.0.219", features=["derive"]}
tokio = { version = "1.45.1", features = ["full"] }
starknet = "0.16.0"
dotenvy = "0.15.7"
tower-http = {version="0.6.6", features=["cors","trace"]}
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
serde_json = "1.0.143"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "time"] }
tracing = "0.1.41"
